make-a-wish-salesforce/src/objects/cg__File_Activity__c.object
<CustomObject>
    <fields>
        <fullName>cg__Account_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account File</label>
        <referenceTo>cg__AccountFile__c</referenceTo>
        <relationshipLabel>File Activities</relationshipLabel>
        <relationshipName>File_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cg__Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Additional_Details__c</fullName>
        <label>Additional Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Case_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case File</label>
        <referenceTo>cg__CaseFile__c</referenceTo>
        <relationshipLabel>File Activities</relationshipLabel>
        <relationshipName>File_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cg__Contact_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact File</label>
        <referenceTo>cg__ContactFile__c</referenceTo>
        <relationshipLabel>File Activities</relationshipLabel>
        <relationshipName>File_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cg__Opportunity_File__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity File</label>
        <referenceTo>cg__OpportunityFile__c</referenceTo>
        <relationshipLabel>File Activities</relationshipLabel>
        <relationshipName>File_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cg__S3Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S3Object</label>
        <referenceTo>cg__S3Object__c</referenceTo>
        <relationshipLabel>File Activities</relationshipLabel>
        <relationshipName>File_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>File Activity</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>File Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>